--- a/episodes/2021-05-19-the-wind-that-shakes-the-barley-ft-james/index.html
+++ b/episodes/2021-05-19-the-wind-that-shakes-the-barley-ft-james/index.html
@@ -91,7 +91,7 @@
 
 <p><a href="https://letterboxd.com/film/the-wind-that-shakes-the-barley/">The Wind That Shakes the Barley</a> tells the story of Damien O’Donovan (Cillian Murphy), an Irish doctor turned guerrilla fighter after witnessing the brutality of British occupying forces in his home of County Cork. He joins his brother, Teddy O’Donovan (Pádraic Delaney), in fighting for the Irish Republican Army for Irish independence from the United Kingdom.</p>
 <p>We’re joined by our friend James to discuss this movie, the brutality Ireland endured during occupation, the Irish War of Independence, the Irish Civil War, and what effects from this period of history linger to this day.</p>
-<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/gommunisd">James</a>.</p>
+<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/gommunisd">James</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/7uU8l7XAd0WJwUWmATs1OO"
