--- a/episodes/2021-06-02-barbarians/index.html
+++ b/episodes/2021-06-02-barbarians/index.html
@@ -91,7 +91,7 @@
 
 <p><a href="https://www.imdb.com/title/tt9184986/">Barbarians</a> is a German historical drama that tells the story of Arminus, a Germanic Barbarian, who as a child is raised in Rome and becomes a Roman soldier. As an adult he is sent back to his home in Germania to aid in ensuring Rome’s control over the various Barbarian tribes.</p>
 <p>We discuss the show, and what we know of the real history that serves as inspiration for this Netflix dramatization.</p>
-<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, and <a href="https://twitter.com/abnormcore">Abram</a>.</p>
+<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, and <a href="https://twitter.com/abnormcore">Abram</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/0nLBedBCPmHfzGVKCxjams"
