--- a/episodes/2021-08-04-west-beirut/index.html
+++ b/episodes/2021-08-04-west-beirut/index.html
@@ -91,7 +91,7 @@
 
 <p>In April, 1975, civil war breaks out; Beirut is partitioned into East and <a href="https://letterboxd.com/film/west-beirut/">West Beirut</a>, along the Christian/Muslim line. Tarek is in high school, making Super 8 movies with his friend, Omar. At first the war is a lark: school has closed, the violence is fascinating, getting from West to East is a game. But he soon learns this isn&rsquo;t a game as the war goes on, going from adventure to tragedy.</p>
 <p>Our friend Liam (aka Hezbolsonaro) comes on the pod to discuss the movie, and the Lebanese Civil War more broadly.</p>
-<p>Hosted by <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/Hezbolsonaro">Liam</a>.</p>
+<p>Hosted by <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/Hezbolsonaro">Liam</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/3xqnaGSYJ1VaaXaRiIUVXw"
