--- a/episodes/2021-09-15-seven-days-in-may/index.html
+++ b/episodes/2021-09-15-seven-days-in-may/index.html
@@ -90,7 +90,7 @@
   <hr>
 
 <p>We&rsquo;ve got a mutiny on our hands in <a href="https://letterboxd.com/film/seven-days-in-may/">Seven Days in May</a>, a 1964 film that explores the idea of a military coup in America. We talk about it, the book it was based on, what JFK thought about it on release, and the general uneasy atmosphere that propelled right wing reaction in the 1960s and onward.</p>
-<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
+<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/75Do5me0ttzya5YAUfPnGa"
