--- a/episodes/2021-09-29-soy-cuba/index.html
+++ b/episodes/2021-09-29-soy-cuba/index.html
@@ -90,7 +90,7 @@
   <hr>
 
 <p>This Soviet made piece of art, <a href="https://letterboxd.com/film/i-am-cuba/">Soy Cuba</a>, tells four stories during the final days of the Batista regime. With the help of Russian Sam and Cuban Jaime we discuss how and why this movie was made, and the response in Cuba and the Soviet Union.</p>
-<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, and <a href="https://twitter.com/BangkokRuckus/">Jaime</a>.</p>
+<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, and <a href="https://twitter.com/BangkokRuckus/">Jaime</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/6prKzEYVdYElYWrYnpDQzL"
