--- a/episodes/2021-10-27-the-iron-giant/index.html
+++ b/episodes/2021-10-27-the-iron-giant/index.html
@@ -90,7 +90,7 @@
   <hr>
 
 <p>The Iron Giant asks us, how would American react if a sentient giant robot crash landed from space in the height of the Cold War? We discuss it, and with the help of special guest Daniel Bessner, the Cold War paranoia sweeping the nation in the 1950s and 60s.</p>
-<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/dbessner">Daniel Bessner</a>.</p>
+<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/dbessner">Daniel Bessner</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/6D0xpQu3rozbeB52Fgoxc3"
