--- a/episodes/2021-11-03-shadow-of-the-vampire/index.html
+++ b/episodes/2021-11-03-shadow-of-the-vampire/index.html
@@ -90,7 +90,7 @@
   <hr>
 
 <p><a href="https://letterboxd.com/film/nosferatu/">Nosferatu</a> is the 1922 expressionist horror silent film whose creation is dramatized in the movie <a href="https://letterboxd.com/film/shadow-of-the-vampire/">Shadow of the Vampire</a>. We watched both these films and discuss both their stories, and the stories of how the vampire came to be in the popular imagination.</p>
-<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
+<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/6dYQUv2ZdSGtx01dW1twhJ"
