--- a/episodes/2021-11-17-keivan-rus/index.html
+++ b/episodes/2021-11-17-keivan-rus/index.html
@@ -90,7 +90,7 @@
   <hr>
 
 <p>Grab your balalaika and drinking horn, because this week we&rsquo;re paddling up the Volga to look at the origins of the Kievan Rus&rsquo;. Russian Sam takes us on a crash course of the early history of this famous rowdy bunch, from the earliest Roman references to Slavic-speaking tribes to the impact the Rus&rsquo; have on modern Russian, Ukrainian, and Belarusian nationalism. Along the way, we&rsquo;ll learn about the Rus&rsquo; often violent hijinks, why Olga of Kiev is an all-time historical girlboss, as well as their intriguing links with the Vikings, a controversial topic at the heart of a historiographical battle almost 300 years in the making.</p>
-<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
+<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/3Rl2E31LWWXNZQVDSTG9NZ"
