--- a/episodes/2021-12-08-lust-caution/index.html
+++ b/episodes/2021-12-08-lust-caution/index.html
@@ -91,7 +91,7 @@
 
 <p>Japanese-occupied China was a place of immense violence and constant intrigues. We invited Carl Zha to talk about the 2007 film <a href="https://letterboxd.com/film/lust-caution/">Lust, Caution</a> and the real-life events that inspired the movie. We glide through the history of Sino-Japanese relations, the reasons for China&rsquo;s pitiable situation at the turn of the 20th century, and the greatest real life version of &ldquo;you either die a hero, or live long enough to see yourself become a villain&rdquo; of the 20th century, the ill-fated story of Wang Jingwei and his collaborationist regime.</p>
 <p>Check out Carl&rsquo;s podcast, <a href="https://silknsteel.podbean.com/">Silk and Steel</a>.</p>
-<p>Hosted by <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/CarlZha/">Carl Zha</a>.</p>
+<p>Hosted by <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/CarlZha/">Carl Zha</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/6SyyQjmMtMmazVrDIuiECG"
