--- a/episodes/2021-12-22-quo-vadis/index.html
+++ b/episodes/2021-12-22-quo-vadis/index.html
@@ -90,7 +90,7 @@
   <hr>
 
 <p>We’re putting the Christ back in Saturnalia this week with an episode on Christianity in the 1st century AD. Maggie guides us through the  history of the early church with the help of the 1951 Hollywood epic <a href="https://letterboxd.com/film/quo-vadis/">Quo Vadis</a>, and explains why these ancient religious communities are so significant to Christians today.</p>
-<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/dialectits">Maggie</a>.</p>
+<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/dialectits">Maggie</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/2SUA0wIXKskhkAd8p4Cg1F"
