--- a/episodes/2021-12-29-sympathy-seeker/index.html
+++ b/episodes/2021-12-29-sympathy-seeker/index.html
@@ -91,7 +91,7 @@
 
 <p>This week, we popped open a bottle of Soviet Champagne to talk about Russian New Year and the 1997 film Sympathy Seeker. Why is New Year&rsquo;s Eve such a big deal in the former Soviet Union? Why are there so many paintings of Lenin around a Christmas tree? Is the Soviet version of Santa really an evil spirit from Slavic myth?</p>
 <p>All this and more as we dive into the history of holidays in the former USSR and the long history of wars against Christmas.</p>
-<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
+<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/1wS7b6SiPs5YcI5gSBZINk"
