--- a/episodes/2022-01-05-the-lion-in-winter/index.html
+++ b/episodes/2022-01-05-the-lion-in-winter/index.html
@@ -90,7 +90,7 @@
   <hr>
 
 <p>Mom&rsquo;s in prison, dad&rsquo;s newest mistress is your fiancée, and your two little brothers are plotting to kill you! If you thought your Christmas was stressful, try being Richard the Lionheart in 1183. For this week&rsquo;s episode on the 1968 film <a href="https://letterboxd.com/film/the-lion-in-winter/">The Lion in Winter</a>, we run through the deadly intrigue of the Plantagenet court and chart the history English Christmas along the way. Come troll the ancient Yuletide carols with us to find out whether Santa Claus has anything to do with Odin, why the 12 Days of Christmas really end on January 5th, and if King Richard the Lionheart ever saw a Christmas tree.</p>
-<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
+<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/2seR4N0wCBp8SKTTsYcKVp"
