--- a/episodes/2022-01-13-failed-colonial-ventures-of-the-americas/index.html
+++ b/episodes/2022-01-13-failed-colonial-ventures-of-the-americas/index.html
@@ -90,7 +90,7 @@
   <hr>
 
 <p>The New World gave birth to many colonies we know and love today, but it also birthed some colonies that didn’t quite make it to maturity. We go back to the late 1600s and take a look around the colonies of Sweden (New Sweden), Courland (Tobago), and Scotland (New Caledonia (the other one)).</p>
-<p>Hosted by <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
+<p>Hosted by <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/5iSJcgiGYWBoHPktK0jISy"
