--- a/episodes/2022-01-26-late-roman-empire/index.html
+++ b/episodes/2022-01-26-late-roman-empire/index.html
@@ -90,7 +90,7 @@
   <hr>
 
 <p>Like all bad things, the Roman Empire came to an end. But why did it take hundreds of years for that to happen? This week, the gang guides us through an astonishingly chaotic period when Rome did NOT fall — the Crisis of the Third Century — and explores how late Roman figures like Constantine, Queen Zenobia, and Julian the Apostate created the medieval world.</p>
-<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
+<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/3ZeuaVceD2lvd0DhukXXqY"
