--- a/episodes/2022-02-02-the-time-that-remains/index.html
+++ b/episodes/2022-02-02-the-time-that-remains/index.html
@@ -91,7 +91,7 @@
 
 <p>Our friend Fathi joins us to discuss <a href="https://letterboxd.com/film/the-time-that-remains/">The Time That Remains</a>, a 2009 film that examines the creation of the state of Israel in 1948 through to the present day. A semi-biographic film, in four chapters, about a family spanning from 1948 until recent times attempts to portray the daily life of those Palestinians who remained in their land and were labelled “Israeli-Arabs,” living as a minority in their own homeland.</p>
 <p>Check out Fathi&rsquo;s website, <a href="https://decolonizepalestine.com/">Decolonize Palestine</a>.</p>
-<p>Hosted by <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/amaninthesun">Fathi</a>.</p>
+<p>Hosted by <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/amaninthesun">Fathi</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/3UKtCsU8frW6tRMlWhrpeQ"
