--- a/episodes/2022-02-09-a-world-between-wars/index.html
+++ b/episodes/2022-02-09-a-world-between-wars/index.html
@@ -92,7 +92,7 @@
 <p>In this intro to a new series of episodes, Sam B, Liam, and Russian Sam give a brief overview of the turbulence that rocked the entire planet in the 20-year span between the first and second World Wars. Topics in this episode include the unsuccessful workers&rsquo; revolutions in 1919 Central Europe and the ensuing rise of fascism, the American attempt to &ldquo;return to normalcy&rdquo; after war abroad and social unrest at home, and the birth of groundbreaking artistic movements like German Expressionism and New Objectivity that documented the chaotic unease of the interwar period.</p>
 <p>As this series progresses, expect in-depth discussions of interwar politics and culture, with episodes on popular topics like the Spanish Civil War as well as more obscure areas like the rise of occultism, Japan&rsquo;s 1936 military coup, and the way modern opera and theater interacted with the legacy of one World War and the lead-up to another.</p>
 <p>This is a huge topic and we&rsquo;re planning on bringing a few friends to help us understand these issues. If you have any suggestions for episode topics or know somebody who might want to come on as a guest, be sure to drop us a line!</p>
-<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
+<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/3gMleExzvfQBhqcWq4kv43"
