--- a/episodes/2022-02-16-the-franks/index.html
+++ b/episodes/2022-02-16-the-franks/index.html
@@ -90,7 +90,7 @@
   <hr>
 
 <p>Grab your throwing-axe because we&rsquo;re going deep into barbarian territory for this episode on the birth of the medieval world. Continuing from last month&rsquo;s discussion on the Late Roman Empire, this week we&rsquo;ve recruited archaeogenetic shield maiden Natasha to help us understand the origins and impact of a culture who conquered half of Europe and might just be the most successful barbarians of them all.</p>
-<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/bonethirty">Natasha</a>.</p>
+<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/bonethirty">Natasha</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/4jyC5t4Cbf6tJGrnlAJusG"
