--- a/episodes/2022-04-13-mandate-palestine/index.html
+++ b/episodes/2022-04-13-mandate-palestine/index.html
@@ -91,7 +91,7 @@
 
 <p>Kevin rejoins us to tell the story of Mandate Palestine through the travails of international diplomacy, as well as the regional developments that unfolded once the British embraced the Balfour Declaration as policy. We explain the workings of the mandate system, the escalation of violence between the Palestinians and Zionist settlers in the early 1920s, and more.</p>
 <p><a href="https://gladiofreeeurope.github.io/episodes/2022-03-30-mandate-palestine/">Part 1 of our Mandate Palestine discussion.</a></p>
-<p>Hosted by <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/ka_levin">Kevin</a>.</p>
+<p>Hosted by <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/ka_levin">Kevin</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/6itqYbSTAwZ4JWdykQ5idH"
