--- a/letov/about-a-fool/index.html
+++ b/letov/about-a-fool/index.html
@@ -114,17 +114,17 @@ Looking for a fool even greater than him</p>
 Looking for a fool even greater than him</p>
 <hr>
 <p>This song was featured on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
-<section class="footnotes" role="doc-endnotes">
+<div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
-<li id="fn:1" role="doc-endnote">
+<li id="fn:1">
 <p>Blini are a bit like pancakes&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
-<li id="fn:2" role="doc-endnote">
+<li id="fn:2">
 <p>Reference to the custom of leaving coins on or inside the bodies of the deceased so that they may pay to cross over into the next world&#160;<a href="#fnref:2" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 </ol>
-</section>
+</div>
 
 
 
