--- a/letov/as-it-should-be/index.html
+++ b/letov/as-it-should-be/index.html
@@ -98,14 +98,14 @@ Awesome and forever</p>
 <p>Everything&rsquo;s as it should be</p>
 <hr>
 <p>This song was featured on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
-<section class="footnotes" role="doc-endnotes">
+<div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
-<li id="fn:1" role="doc-endnote">
+<li id="fn:1">
 <p>Idiomatic expression. The literal translation would be &ldquo;everything is like what others have&rdquo;&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 </ol>
-</section>
+</div>
 
 
 
