--- a/letov/i-will-always-be-against/index.html
+++ b/letov/i-will-always-be-against/index.html
@@ -93,17 +93,17 @@ Fullheartedly expressing a forced ecstasy</p>
 <p>I will always be against this!</p>
 <hr>
 <p>This song was featured on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
-<section class="footnotes" role="doc-endnotes">
+<div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
-<li id="fn:1" role="doc-endnote">
+<li id="fn:1">
 <p>Sovdep was a derogatory term for the Soviet system&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
-<li id="fn:2" role="doc-endnote">
+<li id="fn:2">
 <p>Word used is <em>vozhd</em>. Soviet leaders are meant in this case.&#160;<a href="#fnref:2" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 </ol>
-</section>
+</div>
 
 
 
