--- a/letov/letov-interview-2/index.html
+++ b/letov/letov-interview-2/index.html
@@ -134,20 +134,20 @@
 <p>L: - Russian Revolution, not ideologically. At the very least it does not happen on the level of ideology. They happen emotionally. The animating force behind revolutions are emotions, not ideology. Ideologies come to replace them. Revolt comes first. A revolt directed against all ideologies in the end.</p>
 <hr>
 <p>We discussed this interview on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
-<section class="footnotes" role="doc-endnotes">
+<div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
-<li id="fn:1" role="doc-endnote">
+<li id="fn:1">
 <p>Concept from the thought of Lev Gumilev, a controversial Russian historian and ethnographer. According to him, the growth of ethnic groups is linked to passionarity, the ability for a group to give itself a cause beyond the personal interest. Passionarity comes in cycles and could wear down over time if it is not renewed by charismatic individuals with a spirit of self-sacrifice. Compare to Ibn Khaldun’s cycle of civilizations and the concept of asabiyya.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
-<li id="fn:2" role="doc-endnote">
+<li id="fn:2">
 <p>Barkashov is a neo-Nazi who founded the Russian National Unity party. Very likely an informant.&#160;<a href="#fnref:2" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
-<li id="fn:3" role="doc-endnote">
+<li id="fn:3">
 <p>Viktor Anpilov was the former head of the Trudovaya Rossiya, which refused to join the KPRF as they saw them as reformists. Played an active role in the 1993 Constitutional Crisis. Passed away in 2018.&#160;<a href="#fnref:3" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 </ol>
-</section>
+</div>
 
 
 
