--- a/episodes/2021-09-22-charlie-wilsons-war/index.html
+++ b/episodes/2021-09-22-charlie-wilsons-war/index.html
@@ -90,7 +90,7 @@
   <hr>
 
 <p>Charlie Wilson was a Texas Congressman whose involvement with the Afghan people and the Mujahideen was immortalized in the film <a href="https://letterboxd.com/film/charlie-wilsons-war/">Charlie Wilson&rsquo;s War</a>. With the help of our friend Kevin, we try figure out who Charlie Wilson is really, and more importantly, what war is really.</p>
-<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, and <a href="https://twitter.com/ka_levin">Kevin</a>.</p>
+<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, and <a href="https://twitter.com/ka_levin">Kevin</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/77XX2EWFtMoovhaZb8U94L"
