--- a/episodes/2021-10-13-columbus-day/index.html
+++ b/episodes/2021-10-13-columbus-day/index.html
@@ -90,7 +90,7 @@
   <hr>
 
 <p>Why is Christopher Columbus considered a hero to Italian-Americans, and why did they fight so hard to give us a national holiday to celebrate him? We take a long look at the history of the Italian immigrant experience, and how that got us to Columbus Day (now co-named Indigenous Peoples&rsquo; Day).</p>
-<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
+<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, and <a href="https://twitter.com/halaljew">Halal Sam</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/4wrvdVA28zByxvE1CIFI5c"
