--- a/episodes/2021-10-20-zionism/index.html
+++ b/episodes/2021-10-20-zionism/index.html
@@ -90,7 +90,7 @@
   <hr>
 
 <p>Our good friend Kevin is back to help use trace the roots of Zionism as an ideology and the various religious, colonialist, or nationalist strands that existed before 1948.</p>
-<p>Hosted by <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/ka_levin">Kevin</a>.</p>
+<p>Hosted by <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/ka_levin">Kevin</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/767li0CHY3kAbsU4vkQMyM"
