--- a/episodes/2022-01-19-catholicism-101/index.html
+++ b/episodes/2022-01-19-catholicism-101/index.html
@@ -90,7 +90,7 @@
   <hr>
 
 <p>Our friend James returns to give Russian Sam a crash course in Catholicism and how it differs from other Christian denominations.</p>
-<p>Hosted by <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, and <a href="https://twitter.com/gommunisd">James</a>.</p>
+<p>Hosted by <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, and <a href="https://twitter.com/gommunisd">James</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/1Qr3rMCqRUreJf08PLhQ1N"
