--- a/episodes/2022-03-23-ohio-vs-the-ku-klux-klan/index.html
+++ b/episodes/2022-03-23-ohio-vs-the-ku-klux-klan/index.html
@@ -90,7 +90,7 @@
   <hr>
 
 <p>Our good friend Jern joins us from Ohio for a discussion about the interwar reanimation of America&rsquo;s most notorious terrorist organization: the Ku Klux Klan. Jern tells the story of the working-class Ohio immigrants who formed their own secret society known as the Knights of the Flaming Circle to oppose white supremacy and kick the Klan out of the Buckeye state.</p>
-<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, and Jern.</p>
+<p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, and Jern.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/7xvEzdMqWzs1N9WGE0Es0b"
