--- a/episodes/2022-03-30-mandate-palestine/index.html
+++ b/episodes/2022-03-30-mandate-palestine/index.html
@@ -90,7 +90,7 @@
   <hr>
 
 <p>Our friend Kevin is back to discuss Palestine for our Interwar Series from the late Ottoman period, to the first World War, to the breakup of the Ottoman Empire.</p>
-<p>Hosted by <a href="https://twitter.com/FillerHandle12">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/ka_levin">Kevin</a>.</p>
+<p>Hosted by <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, <a href="https://twitter.com/halaljew">Halal Sam</a>, and <a href="https://twitter.com/ka_levin">Kevin</a>.</p>
 <div class="embed-spotify">
   <iframe
     src="https://open.spotify.com/embed/episode/5LOoILx8xblctCppc2bYTz"
