--- a/letov/everythings-going-according-to-plan/index.html
+++ b/letov/everythings-going-according-to-plan/index.html
@@ -106,17 +106,17 @@ We probably won’t even have to die. <br>
 I woke up in the middle of the night and understood that everything is going according to the plan.</p>
 <hr>
 <p>This song was featured on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
-<section class="footnotes" role="doc-endnotes">
+<div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
-<li id="fn:1" role="doc-endnote">
+<li id="fn:1">
 <p>Archaic word for father. Also used to refer to priests&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
-<li id="fn:2" role="doc-endnote">
+<li id="fn:2">
 <p>Russian language magazine about North Korea&#160;<a href="#fnref:2" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 </ol>
-</section>
+</div>
 
 
 
