--- a/letov/harakiri/index.html
+++ b/letov/harakiri/index.html
@@ -98,14 +98,14 @@ He was drained of hope and all that he could <br>
 But you’ve all stayed as you were!</p>
 <hr>
 <p>This song was featured on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
-<section class="footnotes" role="doc-endnotes">
+<div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
-<li id="fn:1" role="doc-endnote">
+<li id="fn:1">
 <p>Mamai was one of the heads of the Golden Horde&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 </ol>
-</section>
+</div>
 
 
 
