--- a/letov/letov-interview-1/index.html
+++ b/letov/letov-interview-1/index.html
@@ -208,14 +208,14 @@
 <p>L: Thank you, I’m very grateful. I’m very happy that this happened. I’m very surprised that there are so many people in Norilsk who are truly alive. This has been one of the best concerts… The two concerts we’ve had here, they were the best we’ve ever had. I am insanely happy. Thank you so much.</p>
 <hr>
 <p>We discussed this interview on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
-<section class="footnotes" role="doc-endnotes">
+<div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
-<li id="fn:1" role="doc-endnote">
+<li id="fn:1">
 <p>Viktor Anpilov&rsquo;s anti-revisionist communist group&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 </ol>
-</section>
+</div>
 
 
 
