--- a/letov/index.html
+++ b/letov/index.html
@@ -78,6 +78,7 @@
       For an overabundance of wit, there&rsquo;s only beggars&rsquo; bowls and prison
 For a boistrous brain, there are only ditches and dikes For a beautiful brain, there are only scabs and lice For universal love there are only bloodied faces
 A bedsheet blows in the wind, walking through morning dew From fruitless ideas to ethereal guests From closed doors to buried animals From covered tables to heads busted open
+A black satellite flies parallel to the road He will console and save, he will deliver peace Under a coarse wing, night around a round table A red-white poster, start up the scooter
     </p>
  
 </div>
@@ -241,6 +242,7 @@ Lenin is the jokes with which they hound us Lenin is the pastries with which the
     <p>
       Letov: It’s punk rock, Russian punk rock. I wouldn’t even focus on the style, there are many different styles. We have a few projects, Kommunizm, Grazhdanskaya Oborona, and my own personal project. On the whole, it’s garage rock, garage punk.
 Interviewer: Punk rock means you’re against something, right? That’s how it was in the West 10 years ago. Can you compare Western music to your own?
+L: I think that Russian rock has always differed from your rock.
     </p>
  
 </div>
@@ -265,6 +267,7 @@ L: Not the band, me personally.
 I: What kind?
 L: What?
 I: Well, right now politics consists mostly of intrigues and whatnot.
+L: Politics of the most direct kind.
     </p>
  
 </div>
