--- a/episodes/2022-12-14-genetics-101/index.html
+++ b/episodes/2022-12-14-genetics-101/index.html
@@ -90,6 +90,8 @@
   <hr>
 
 <p>Was your grandmother a Neanderthal? Did the English language originate in ancient Iran? What&rsquo;s a haplogroup anyway? These questions and more will be answered in our Q&amp;A with returning guest Natasha, a molecular biologist with great insight into what recent breakthroughs in ancient DNA can and can&rsquo;t teach us about our past. This episode goes over the broad strokes of archaeogenetic research, using a few famous case studies to explore discoveries made through genetics as well as potential ethical pitfalls and dangerous misapplications. Plus, we make sure to dive into the hottest gossip and scandals currently tearing the field of ancient DNA research strand by strand.</p>
+<hr>
+<p><a href="https://www.patreon.com/GladioFreeEurope">Support us on Patreon</a></p>
 <p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a>, and <a href="https://twitter.com/bonethirty">Natasha</a></p>
 <div class="embed-spotify">
   <iframe
