--- a/episodes/2023-01-11-the-last-valley/index.html
+++ b/episodes/2023-01-11-the-last-valley/index.html
@@ -91,6 +91,8 @@
 
 <p>The one and only Matt Christman of Chapo Trap House stopped by in our little valley to bring us the latest updates on the Thirty Years&rsquo; War. We ventured into an overview of the history of the war, when the Four Horsemen of the Apocalypse roamed the Earth, the 1971 James Clavell flick The Last Valley starring Omar Sharif and Michael Caine, and Matt&rsquo;s upcoming series Hell on Earth where he and producer Chris Wade dive into the terrifying world of 17th-century Central Europe. Is building a monkey house enough to secure the heart of your beloved? Was Ferdinand II literally Hitler? How did the grooming of one prince change the course of history? What does all of this mean for the world to come? Which personality from the Thirty Years&rsquo; War would win in a gladiatorial match? All this and more on this week&rsquo;s Gladio Free Europe! Hell on Earth premiers on January 11.</p>
 <p>Christman Interview begins at 14:50</p>
+<hr>
+<p><a href="https://www.patreon.com/GladioFreeEurope">Support us on Patreon</a></p>
 <p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a> and <a href="https://twitter.com/cushbomb">Matt Christman</a></p>
 <div class="embed-spotify">
   <iframe
