--- a/episodes/2023-01-25-new-smyrna-a-greek-colony-in-florida/index.html
+++ b/episodes/2023-01-25-new-smyrna-a-greek-colony-in-florida/index.html
@@ -92,6 +92,8 @@
 <p>In 1768, hundreds of Greek peasants were brought to Florida by an ambitious British businessman in hopes of creating a classical paradise in America. Within just three months, New Smyrna would be the site of a full-on worker&rsquo;s revolution and this utopian dream would go in flames.</p>
 <p>Liam and Russian Sam go back to Florida this week to chart the early history of the Sunshine State, starting with the first European explorations of the soupy, steamy peninsula by Ponce de Leon and ending with its ultimate annexation by the United States in 1821. In between, Florida changed hands many times and was the site of many different spectacular colonial failures. Storms, sickness, and starvation wrecked every European adventure into Florida, while at the same time allowing communities to Native Americans and freedmen to thrive undisturbed. Grandest of all of these colonial failures was New Smyrna, a beach town that still exists today. Scottish merchant Andrew Turnbull established the colony to be a homeland for Greek refugees from his wife Gracia&rsquo;s native country, but by the end most of the settlers were actually Catalans. Intended to be a model alternative to plantation slavery, New Smyrna was nonetheless the site of brutal forced labor.</p>
 <p>From start to finish, the New Smyrna was a dismal failure, but the history of this colony encapsulates so much that makes Florida unique, and possibly the most cursed corner of America.</p>
+<hr>
+<p><a href="https://www.patreon.com/GladioFreeEurope">Support us on Patreon</a></p>
 <p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a> and <a href="https://twitter.com/reelCheburashka">Russian Sam</a></p>
 <div class="embed-spotify">
   <iframe
