--- a/episodes/2023-02-08-hail-caesar/index.html
+++ b/episodes/2023-02-08-hail-caesar/index.html
@@ -92,6 +92,8 @@
 <p>The Golden Age of Hollywood was a rough time to be an actor. Overdoses, suicides, and secret abortions were routine, but always escaped the papers thanks to the hard work of the studio fixers. In the 1930s to the 1950s, Hollywood studio heads hired thugs and corporate spies to maintain control of their employees and keep scandals under wraps, and these fixers often used blackmail and brutality to enforce the studio&rsquo;s will.</p>
 <p>This week, Gladio Free Europe discuss Joel and Ethan Coen&rsquo;s recent classic Hail, Caesar!  which follows a day in the life of one of these fixers, a fairground bouncer turned movie executive named Eddie Mannix, played by Josh Brolin. Although the movie depicts him as a deeply conflicted family man, the real Mannix was a world-class scumbag who abused and manipulated may actors, particularly young women, and may have even murdered those who got in his way. Liam and Russian Sam recount some sordid stories about real Hollywood fixers, especially Mannix, and go into the unlikely origins of America&rsquo;s film industry and its early leaders such as Louis B. Mayer. The studio system was both awful and awe-inspiring, an institution that relied on terrible exploitation and enabled shocking abuse, but also produced many of the greatest cultural achievements America has ever seen. Men like Eddie Mannix made all of that possible.</p>
 <p>This episode includes some graphic descriptions of abuse.</p>
+<hr>
+<p><a href="https://www.patreon.com/GladioFreeEurope">Support us on Patreon</a></p>
 <p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a> and <a href="https://twitter.com/reelCheburashka">Russian Sam</a></p>
 <div class="embed-spotify">
   <iframe
