--- a/episodes/2022-11-23-new-england-p.-1/index.html
+++ b/episodes/2022-11-23-new-england-p.-1/index.html
@@ -90,6 +90,8 @@
   <hr>
 
 <p>Every kid in America grows up hearing about &ldquo;the first Thanksgiving&rdquo; featuring Squanto, the Mayflower, and the surprising nutritional value of dead-fish fertilizer. But this patriotic narrative offers only a tiny glimpse at the astonishing and agonizing history of contact between Europeans and indigenous peoples of New England, who called themselves the Ninnimissinuok. Our multi-part series on 17th century New England begins by examining the beliefs, culture, rapidly-changing politics of nations like the Wampanoag and Narragansett hundreds of years before religious disputes on the other side of the ocean would send English interlopers into their land. We&rsquo;ll also look at colorful figures like George Waymouth and Ferdinando Gorges who were involved in exploration and even failed colonization in New England long before the Pilgrims, as well as the unbelievable stories of indigenous people like Sassacomit and the Tisquantum who were stolen from their homes and brought to Europe, yet managed to make it back in one piece. Last, look into how and why an obscure but probably real celebration between some Pilgrims and Wampanoags became an essential part of our nationalist mythos.</p>
+<hr>
+<p><a href="https://www.patreon.com/GladioFreeEurope">Support us on Patreon</a></p>
 <p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, and <a href="https://twitter.com/reelCheburashka">Russian Sam</a>.</p>
 <div class="embed-spotify">
   <iframe
