--- a/episodes/2023-01-18-queen-christina/index.html
+++ b/episodes/2023-01-18-queen-christina/index.html
@@ -90,6 +90,8 @@
   <hr>
 
 <p>This week, we are joined by Anton Larsson to discuss the 1933 Greta Garbo film Queen Christina and to trace the enigmatic story of the frenzied rise and fall of the Swedish Empire, the bane of Central and Eastern Europe which reached its apogee during Christina&rsquo;s reign. Surprisingly few Swedes realize that their country was once the center of an overseas empire, but their neighbors sure haven&rsquo;t forgotten.  Sweden, seemingly existing on the periphery, provided a continuous stream of both trade and warfare in a surprisingly vast swathe of the world across many different eras. We look at (hopefully) the last of these while also chatting about the film and looking more closely into the life of the real-life Queen Christina.</p>
+<hr>
+<p><a href="https://www.patreon.com/GladioFreeEurope">Support us on Patreon</a></p>
 <p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/reelCheburashka">Russian Sam</a> and <a href="https://twitter.com/antonyaolarsson">Anton</a></p>
 <div class="embed-spotify">
   <iframe
