--- a/episodes/2023-03-01-more-bog-bodies/index.html
+++ b/episodes/2023-03-01-more-bog-bodies/index.html
@@ -78,7 +78,7 @@
       
        <h1>Yet More Bog Bodies</h1>
        <div class="episode-summary">
-       We talked about yet more bog bodies, as well as 
+       We talked about yet more bog bodies, as well as a new meta-study which analyzes the bog body phenomenon across Europe. 
        </p>
       
        </div>
@@ -91,6 +91,8 @@
 
 <p>More and more people are talking about bog bodies! Due to great feedback on our most recent episode we&rsquo;re following up our bog talk with an overview of recent developments in wetland archaeology and an overview of some of the most interesting bog sites in Europe. We dive into our favorite finds that we didn&rsquo;t have time to cover in our last episode, like the morbid battlefield of Alken Enge and the beautiful bog dog of Saxony. We expand our scope to bog bodies outside the Iron Age, exploring corpses deposited in bogs from 9,000 BC up to a late medieval murder mystery. Linked below is the new meta-analysis of hundreds of bog remains we draw from in this episode.</p>
 <p>Tune into Gladio Free Europe this week for one more dip into the murky mire.</p>
+<hr>
+<p><a href="https://www.patreon.com/GladioFreeEurope">Support us on Patreon</a></p>
 <p><a href="https://www.cambridge.org/core/journals/antiquity/article/bogs-bones-and-bodies-the-deposition-of-human-remains-in-northern-european-mires-9000-bcad-1900/B90A16A211894CB87906A7BCFC0B2FC7">Bogs, bones and bodies: the deposition of human remains in northern European mires (9000 BC–AD 1900)</a></p>
 <p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a> and <a href="https://twitter.com/reelCheburashka">Russian Sam</a></p>
 <div class="embed-spotify">
